--- a/layouts/partials/head/meta-tags.html
+++ b/layouts/partials/head/meta-tags.html
@@ -11,6 +11,7 @@
 <meta name="description" content="{{ .Description | default (.Summary | default .Site.Params.description ) }}">
 <meta name="keywords" content="{{ (delimit .Keywords ", ") | default .Site.Params.keywords }}">
 <meta name="fediverse:creator" content="{{ .Params.fediverseCreator }}" />
+<meta property="og:image:alt" content="{{ .Params.ogImagealt }}" />
 
 {{ template "_internal/twitter_cards.html" . }}
 {{ template "_internal/opengraph.html" . }}
